[package]
name = "eth_board"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = "1.0.2"
ethers-providers = { version = "1.0.2", features = ["ws"] }
eyre = "0.6.8"
tokio = { version = "1", features = ["full"] }
